deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot42-deployment
  labels:
    app: iot42
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot42
  template:
    metadata:
      labels:
        app: iot42
    spec:
      containers:
        - name: iot42
          image: alesspal/iot42:v1
          ports:
            - containerPort: 80
