service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-service
spec:
  selector:
    app: playground
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30088
  type: NodePort
