ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot42-ingress
  namespace: dev
spec:
  rules:
    - host: iot42
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: iot42-service
                port:
                  number: 8888
